Fix tab buttons overlap on iOS `Add to Home screen`

--- a/apps/client/src/app/pages/home/home-page.scss
+++ b/apps/client/src/app/pages/home/home-page.scss
@@ -61,6 +61,7 @@
 
       .mat-tab-header {
         border-top: 0;
+        margin-bottom: 1rem;
 
         .mat-ink-bar {
           visibility: hidden !important;
